Add user schema phone and query
