# src/routes/users/index.js
@@ -2,7 +2,7 @@ import express from 'express';
 
 import getUser from './getUser';
 import getUserById from './getUserById';
-import getUserByName from './getUserByName';
+import getUserByPhone from './getUserByPhone';
 import postUser from './postUser';
 import putUser from './putUser';
 import removeUser from './deleteUser';
@@ -13,7 +13,7 @@ const router = express.Router();
 
 router.get('/', getUser);
 router.get('/:id', getUserById);
-router.get('/search/:name', getUserByName);
+router.get('/search/:phone', getUserByPhone);
 router.post('/', postUser);
 router.put('/', putUser);
 router.delete('/', Util.isLoggedIn, removeUser);
